--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,7 @@
 Source: protobuf
 Section: devel
 Priority: optional
-Build-Depends:
-# Debian build system
- , debhelper (>= 9), autoconf, automake, libtool
-# C/C++
- , zlib1g-dev
- , libgtest-dev
+Build-Depends: debhelper (>=9), autoconf, automake, libtool, zlib1g-dev
 Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
 Standards-Version: 3.6.1
 Homepage: https://github.com/protocolbuffers/protobuf
