--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,18 @@
 Source: protobuf
 Section: devel
 Priority: optional
-Build-Depends: debhelper (>=9), autoconf, automake, libtool, zlib1g-dev
+Build-Depends:
+# Debian build system
+ , debhelper (>= 9)
+ , autotools-dev
+ , dh-autoreconf
+# C/C++
+ , zlib1g-dev
+ , libgtest-dev
 Maintainer: Laszlo Boszormenyi (GCS) <gcs@debian.org>
 Standards-Version: 3.6.1
 Homepage: https://github.com/protocolbuffers/protobuf
+#Vcs-Git: git://github.com/protocolbuffers/protobuf
 
 Package: libprotobuf17
 Architecture: linux-any
